--- a/pages/9142.html
+++ b/pages/9142.html
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -414,7 +413,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p>For <math class='maruku-mathml' display='inline' id='mathml_adcd0a2603ef5533deb221c051d83fbd726dc4dd_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>p</mi><mo>+</mo><mi>q</mi><mo>≥</mo><mn>3</mn></mrow><annotation encoding='application/x-tex'>p + q \geq 3</annotation></semantics></math> then the <a class='existingWikiWord' href='/nlab/show/group'>group</a> of conformal transformations of <math class='maruku-mathml' display='inline' id='mathml_adcd0a2603ef5533deb221c051d83fbd726dc4dd_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ℝ</mi> <mrow><mi>p</mi><mo>,</mo><mi>q</mi></mrow></msup></mrow><annotation encoding='application/x-tex'>\mathbb{R}^{p,q}</annotation></semantics></math> is <math class='maruku-mathml' display='inline' id='mathml_adcd0a2603ef5533deb221c051d83fbd726dc4dd_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>≃</mo><mi>O</mi><mo stretchy='false'>(</mo><mi>p</mi><mo>+</mo><mn>1</mn><mo>,</mo><mi>q</mi><mo>+</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>\simeq O(p+1,q+1)</annotation></semantics></math></p>
+<p>For <math class='maruku-mathml' display='inline' id='mathml_6807e9d4cd97e988279965119b0d21200295385a_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>p</mi><mo>+</mo><mi>q</mi><mo>≥</mo><mn>3</mn></mrow><annotation encoding='application/x-tex'>p + q \geq 3</annotation></semantics></math> then the <a class='existingWikiWord' href='/nlab/show/group'>group</a> of conformal transformations of <math class='maruku-mathml' display='inline' id='mathml_6807e9d4cd97e988279965119b0d21200295385a_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ℝ</mi> <mrow><mi>p</mi><mo>,</mo><mi>q</mi></mrow></msup></mrow><annotation encoding='application/x-tex'>\mathbb{R}^{p,q}</annotation></semantics></math> is <math class='maruku-mathml' display='inline' id='mathml_6807e9d4cd97e988279965119b0d21200295385a_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>≃</mo><mi>O</mi><mo stretchy='false'>(</mo><mi>p</mi><mo>+</mo><mn>1</mn><mo>,</mo><mi>q</mi><mo>+</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>\simeq O(p+1,q+1)</annotation></semantics></math></p>
 </li>
 </ul>
 
@@ -454,22 +453,27 @@ margin-left: 0em;
 
 <p>
 </p>
+
+<p>
+ 
+</p>
 </div>
 
 <div class="revisedby">
-  Revised on July 27, 2016 09:27:59 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (88.128.80.74)
+  <p>
+  Last revised on July 10, 2018 at 08:33:02.
+  See the <a href="https://ncatlab.org/nlab/history/conformal transformation" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/conformal+transformation" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/conformal+transformation/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/conformal+transformation" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/conformal+transformation" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/conformal+transformation" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/conformal+transformation/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/conformal+transformation" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/conformal+transformation" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/conformal transformation/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/conformal+transformation" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/conformal+transformation" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/conformal+transformation" id="view_source" rel="nofollow">Source</a>
