--- a/pages/3412.html
+++ b/pages/3412.html
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8718/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -308,73 +307,26 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p><strong>Rainer Vogt</strong> (1942–2015) was a mathematician specialised in <a class='existingWikiWord' href='/nlab/show/homotopy+theory'>homotopy theory</a>.</p>
+    <p>the link to his weebsite produces Seite nicht erreichbar</p>
 
-<p>He received his Ph.D. from the University of Warwick and his thesis advisor was <a class='existingWikiWord' href='/nlab/show/Michael+Boardman'>Michael Boardman</a>. He was a a full professor at Osnabrück University in Germany.</p>
-
-<ul>
-<li><a href='http://www.mathematik.uni-osnabrueck.de/staff/phpages/vogtr.rdf.shtml'>website</a></li>
-</ul>
-
-<p>He coauthored with Boardman the famous book <strong>Homotopy invariant algebraic structures on topological spaces</strong>, Springer Lecture Notes in Math 347 (1973).</p>
-
-<p>This book introduced the notion of <a class='existingWikiWord' href='/nlab/show/weak+Kan+complex'>weak Kan complex</a> that was later popularized by <a class='existingWikiWord' href='/nlab/show/Andre+Joyal'>André Joyal</a> under the name <a class='existingWikiWord' href='/nlab/show/quasi-category'>quasi-category</a> as a natural basis for the <a class='existingWikiWord' href='/nlab/show/higher+category+theory'>higher category theory</a> of <a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-category'>(∞,1)-categories</a>.</p>
-
-<p>An early application of the ideas from that book was in the proof of what is sometimes refereed to as Vogt’s theorem on categories of homotopy coherent maps, between homotopy coherent diagrams. This is briefly discussed at <a class='existingWikiWord' href='/nlab/show/homotopy+coherent+diagram'>homotopy coherent diagram</a>. It occurs in his paper</p>
-
-<ul>
-<li>R.M. Vogt, <em>Homotopy limits and colimits</em>, Math. Z., 134 (1973) 11-52,</li>
-</ul>
-
-<p>which gave a neat explicit construction/description of <a class='existingWikiWord' href='/nlab/show/homotopy+limit'>homotopy limit</a>s.</p>
-
-<h2 id='related_entries'>Related entries</h2>
-
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/stable+homotopy+category'>stable homotopy category</a>, <a class='existingWikiWord' href='/nlab/show/smash+product+of+spectra'>smash product of spectra</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/quasi-category'>quasi-category</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Boardman-Vogt+resolution'>Boardman-Vogt resolution</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Boardman-Vogt+tensor+product'>Boardman-Vogt tensor product</a></p>
-</li>
-</ul>
-
-<h2 id='references'>References</h2>
-
-<p>Some of the above material is taken from <a class='existingWikiWord' href='/joyalscatlab/published/Vogt%2C+Rainer' title='joyalscatlab'>Joyal&#39;s CatLab -- Rainer Vogt</a>.</p>
-
-<p><div class='property'> category: <a class='category_link' href='/nlab/list/people'>people</a></div></p>
-
-<p>
- 
- 
- 
-</p>
+<p>Die Webpräsenz des Institutes für Mathematik hat sich geändert. Sie hatten sich Lesezeichen auf bisherige Inhalte gesetzt? Unter www.mathematik.uni-osnabrueck.de finden Sie die entsprechenden neuen Seiten, um sich Ihre Lesezeichen neu zu setzen. Vielen Dank für Ihr Verständnis. Sie haben Links auf bisherige Inhalte, zum Beispiel in Ihren Printmedien, veröffentlicht und benötigen nun eine Umleitung auf die entsprechenden Seiten im aktuellen Webauftritt? Bitte setzen Sie sich mit der Onlineredaktion in Verbindung. Vielen Dank!</p>
 </div>
 
 <div class="revisedby">
-  Revised on February 16, 2016 06:04:50 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (86.189.13.49)
+  <p>
+  Last revised on July 10, 2018 at 10:25:05.
+  See the <a href="https://ncatlab.org/nlab/history/Rainer Vogt" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Rainer+Vogt" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Rainer+Vogt/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/Rainer+Vogt" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Rainer+Vogt" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/Rainer+Vogt" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Rainer+Vogt/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/Rainer+Vogt" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Rainer+Vogt" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/Rainer Vogt/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/Rainer+Vogt" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/Rainer+Vogt" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/Rainer+Vogt" id="view_source" rel="nofollow">Source</a>
