--- a/pages/3412.html
+++ b/pages/3412.html
@@ -293,7 +293,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/8718/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8718/#Item_2" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -307,21 +307,19 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p>the link to his weebsite produces Seite nicht erreichbar</p>
-
-<p>Die Webpräsenz des Institutes für Mathematik hat sich geändert. Sie hatten sich Lesezeichen auf bisherige Inhalte gesetzt? Unter www.mathematik.uni-osnabrueck.de finden Sie die entsprechenden neuen Seiten, um sich Ihre Lesezeichen neu zu setzen. Vielen Dank für Ihr Verständnis. Sie haben Links auf bisherige Inhalte, zum Beispiel in Ihren Printmedien, veröffentlicht und benötigen nun eine Umleitung auf die entsprechenden Seiten im aktuellen Webauftritt? Bitte setzen Sie sich mit der Onlineredaktion in Verbindung. Vielen Dank!</p>
+    <p>Webpage with <a href='https://www.mathematik.uni-osnabrueck.de/forschung/ag_topologie_und_geometrie/vogt_rainer_nachruf.html'>obituary</a> at his former <a href='https://www.mathematik.uni-osnabrueck.de/forschung/ag_topologie_und_geometrie.html'>research group</a> in Osnabrück.</p>
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on July 10, 2018 at 10:25:05.
+  Last revised on July 10, 2018 at 11:20:03.
   See the <a href="https://ncatlab.org/nlab/history/Rainer Vogt" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Rainer+Vogt" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Rainer+Vogt/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/Rainer+Vogt" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Rainer+Vogt" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Rainer+Vogt" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Rainer+Vogt/8" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(8 revisions)</span> | <a href="/nlab/show/diff/Rainer+Vogt" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Rainer+Vogt" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Rainer Vogt/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
