--- a/pages/3413.html
+++ b/pages/3413.html
@@ -370,7 +370,7 @@ margin-left: 0em;
 <p>and Rainer Vogt’s article (with self explanatory title):</p>
 
 <ul>
-<li id='VogtMemory'>Rainer Vogt, <em>My time as Mike Boardman’s student and our work on infinite loop spaces</em> (<a class='existingWikiWord' href='/nlab/files/VogtMemory.pdf' title='pdf'>pdf</a>)</li>
+<li id='VogtMemory'><a class='existingWikiWord' href='/nlab/show/Rainer+Vogt'>Rainer Vogt</a>, <em>My time as Mike Boardman’s student and our work on infinite loop spaces</em> (<a class='existingWikiWord' href='/nlab/files/VogtMemory.pdf' title='pdf'>pdf</a>)</li>
 </ul>
 
 <p><div class='property'> category: <a class='category_link' href='/nlab/list/people'>people</a></div></p>
@@ -384,14 +384,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on July 11, 2018 at 05:07:30.
+  Last revised on July 11, 2018 at 06:14:53.
   See the <a href="https://ncatlab.org/nlab/history/Michael Boardman" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Michael+Boardman" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Michael+Boardman/9" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(9 revisions)</span> | <a href="/nlab/show/diff/Michael+Boardman" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Michael+Boardman" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Michael+Boardman" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Michael+Boardman/10" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(10 revisions)</span> | <a href="/nlab/show/diff/Michael+Boardman" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Michael+Boardman" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Michael Boardman/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
